added splash page

--- a/home.html
+++ b/home.html
@@ -24,6 +24,7 @@
         </div>
     </header>
 
+    <a href="https://www.google.com/search?q=utah+jazz&oq=utah+ja&aqs=chrome.2.69i59l3j69i57j0i512j69i60l3.6447j0j7&sourceid=chrome&ie=UTF-8#sie=m;/g/11vchfvf15;3;/m/05jvx;dt;fp;1;;;" target="_blank">
     <div class="today-game">
         <div class="today-game__portland">
             <img src="screenshots/blazers.png" style="height: 70px; width: 70px;" />
@@ -36,11 +37,13 @@
             <h6 class="today-game--white">6-13</h6>
         </div>
     </div>
+    </a>
 
     <div class="today-span">
         <h1>UTAH JAZZ STARTER</h1>
     </div>
 
+    
     <div class="today-starters">
         <a href="https://www.espn.com/nba/player/_/id/4433627/keyonte-george" target="_blank">
             <div class="today-starter">
@@ -72,87 +75,95 @@
                 <h1>PG</h1>
             </div>
         </a>
-        <div class="today-starter">
-            <h1>00</h1>
-            <img src="https://a.espncdn.com/combiner/i?img=/i/headshots/nba/players/full/2528426.png"
-                style="width:90px; height:90px;" />
-            <div class="today-starter__profile">
-                <h1>Jordan Clarkson</h1>
-                <div class="today-starter__profile__stats">
-                    <div class="today-starter__profile__stats--PTS">
-                        <span>PTS</span>
-                        <span> 17.8</span>
-                    </div>
-                    <div class="today-starter__profile__stats--REB">
-                        <span>REB</span>
-                        <span> 3.3</span>
-                    </div>
-                    <div class="today-starter__profile__stats--AST">
-                        <span>AST</span>
-                        <span> 4.9</span>
-                    </div>
-                    <div class="today-starter__profile__stats--FG">
-                        <span>FG%</span>
-                        <span> 41.4</span>
-                    </div>
-                </div>
-            </div>
-            <h1>SG</h1>
-        </div>
-        <div class="today-starter">
-            <h1>23</h1>
-            <img src="https://a.espncdn.com/combiner/i?img=/i/headshots/nba/players/full/4066336.png"
-                style="width:90px; height:90px;" />
-            <div class="today-starter__profile">
-                <h1>Lauri Markkanen</h1>
-                <div class="today-starter__profile__stats">
-                    <div class="today-starter__profile__stats--PTS">
-                        <span>PTS</span>
-                        <span> 23.7</span>
-                    </div>
-                    <div class="today-starter__profile__stats--REB">
-                        <span>REB</span>
-                        <span> 8.7</span>
-                    </div>
-                    <div class="today-starter__profile__stats--AST">
-                        <span>AST</span>
-                        <span> 1.1</span>
-                    </div>
-                    <div class="today-starter__profile__stats--FG">
-                        <span>FG%</span>
-                        <span> 48.4</span>
+        <a href="https://www.espn.com/nba/player/_/id/2528426/jordan-clarkson" target="_blank">
+            <div class="today-starter">
+                <h1>00</h1>
+                <img src="https://a.espncdn.com/combiner/i?img=/i/headshots/nba/players/full/2528426.png"
+                    style="width:90px; height:90px;" />
+                <div class="today-starter__profile">
+                    <h1>Jordan Clarkson</h1>
+                    <div class="today-starter__profile__stats">
+                        <div class="today-starter__profile__stats--PTS">
+                            <span>PTS</span>
+                            <span> 17.8</span>
+                        </div>
+                        <div class="today-starter__profile__stats--REB">
+                            <span>REB</span>
+                            <span> 3.3</span>
+                        </div>
+                        <div class="today-starter__profile__stats--AST">
+                            <span>AST</span>
+                            <span> 4.9</span>
+                        </div>
+                        <div class="today-starter__profile__stats--FG">
+                            <span>FG%</span>
+                            <span> 41.4</span>
+                        </div>
                     </div>
                 </div>
+                <h1>SG</h1>
             </div>
-            <h1>SF</h1>
-        </div>
-        <div class="today-starter">
-            <h1>20</h1>
-            <img src="https://a.espncdn.com/combiner/i?img=/i/headshots/nba/players/full/3908845.png"
-                style="width:90px; height:90px;" />
-            <div class="today-starter__profile">
-                <h1>John Collins</h1>
-                <div class="today-starter__profile__stats">
-                    <div class="today-starter__profile__stats--PTS">
-                        <span>PTS</span>
-                        <span> 14.3</span>
-                    </div>
-                    <div class="today-starter__profile__stats--REB">
-                        <span>REB</span>
-                        <span> 8.4</span>
-                    </div>
-                    <div class="today-starter__profile__stats--AST">
-                        <span>AST</span>
-                        <span> 0.8</span>
-                    </div>
-                    <div class="today-starter__profile__stats--FG">
-                        <span>FG%</span>
-                        <span> 48.1</span>
+        </a>
+        <a href="https://www.espn.com/nba/player/_/id/4066336/lauri-markkanen" target="_blank">
+            <div class="today-starter">
+
+                <h1>23</h1>
+                <img src="https://a.espncdn.com/combiner/i?img=/i/headshots/nba/players/full/4066336.png"
+                    style="width:90px; height:90px;" />
+                <div class="today-starter__profile">
+                    <h1>Lauri Markkanen</h1>
+                    <div class="today-starter__profile__stats">
+                        <div class="today-starter__profile__stats--PTS">
+                            <span>PTS</span>
+                            <span> 23.7</span>
+                        </div>
+                        <div class="today-starter__profile__stats--REB">
+                            <span>REB</span>
+                            <span> 8.7</span>
+                        </div>
+                        <div class="today-starter__profile__stats--AST">
+                            <span>AST</span>
+                            <span> 1.1</span>
+                        </div>
+                        <div class="today-starter__profile__stats--FG">
+                            <span>FG%</span>
+                            <span> 48.4</span>
+                        </div>
                     </div>
                 </div>
+                <h1>SF</h1>
             </div>
-            <h1>PF</h1>
-        </div>
+        </a>
+        <a href="https://www.espn.com/nba/player/_/id/3908845/john-collins" target="_blank">
+            <div class="today-starter">
+                <h1>20</h1>
+                <img src="https://a.espncdn.com/combiner/i?img=/i/headshots/nba/players/full/3908845.png"
+                    style="width:90px; height:90px;" />
+                <div class="today-starter__profile">
+                    <h1>John Collins</h1>
+                    <div class="today-starter__profile__stats">
+                        <div class="today-starter__profile__stats--PTS">
+                            <span>PTS</span>
+                            <span> 14.3</span>
+                        </div>
+                        <div class="today-starter__profile__stats--REB">
+                            <span>REB</span>
+                            <span> 8.4</span>
+                        </div>
+                        <div class="today-starter__profile__stats--AST">
+                            <span>AST</span>
+                            <span> 0.8</span>
+                        </div>
+                        <div class="today-starter__profile__stats--FG">
+                            <span>FG%</span>
+                            <span> 48.1</span>
+                        </div>
+                    </div>
+                </div>
+                <h1>PF</h1>
+            </div>
+        </a>
+        <a href="https://www.espn.com/nba/player/_/id/4433136/walker-kessler" target="_blank">
         <div class="today-starter">
             <h1>24</h1>
             <img src="https://a.espncdn.com/combiner/i?img=/i/headshots/nba/players/full/4433136.png"
@@ -180,6 +191,10 @@
             </div>
             <h1>C</h1>
         </div>
+        </a>
+    </div>
+    <div class="splash-screen">
+        <img src="screenshots/logo.gif">
     </div>
     <nav class="menu">
         <ul>
@@ -189,6 +204,7 @@
             <li><a href="#"><i class="fa-solid fa-ellipsis fa-2xl"></i></a></li>
         </ul>
     </nav>
+
 
     <script src="https://kit.fontawesome.com/a768803cee.js" crossorigin="anonymous"></script>
 </body>
