--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LogIn</title>
+    <title>Home</title>
     <link href="css/styles.css" rel="stylesheet" />
 </head>
 
@@ -199,7 +199,7 @@
     <nav class="menu">
         <ul>
             <li><a href="home.html"><i class="fa-solid fa-basketball fa-2xl select"></i></a></li>
-            <li><a href="#"><i class="fa-solid fa-comment fa-2xl"></i></a></li>
+            <li><a href="chats.html"><i class="fa-solid fa-comment fa-2xl"></i></a></li>
             <li><a href="#"><i class="fa-regular fa-calendar-days fa-2xl"></i></a></li>
             <li><a href="#"><i class="fa-solid fa-ellipsis fa-2xl"></i></a></li>
         </ul>
