almost finishing chats page
it requires messages of the players who still play in Utah jazz now.

--- a/chats.html
+++ b/chats.html
@@ -36,7 +36,20 @@
     </div>
 
     <div class="chats">
-        <div class="chats-player">
+        <div class="chats-player chats-player--tomato">
+            <div class="chats-player--face">
+                <img src="screenshots/markkanen-cutout.png" style="height:70px; width:70px;">
+            </div>
+            <div class="chats-player--chat">
+                <h1 class="chats-player--name">Lauri Markkanen</h1>
+                <h6 class="chats-player--mention"></h6>
+            </div>
+            <div class="chats-player--times">
+                <h6 class="chats-player--time">10:04 PM</h6>
+                <div class="sticker">3</div>
+            </div>
+        </div>
+        <div class="chats-player chats-player--tomato">
             <div class="chats-player--face">
                 <img src="screenshots/george-cutout.png" style="height:70px; width:70px;">
             </div>
@@ -45,11 +58,11 @@
                 <h6 class="chats-player--mention"></h6>
             </div>
             <div class="chats-player--times">
-                <h6 class="chats-player--time"></h6>
+                <h6 class="chats-player--time">10:03 PM</h6>
                 <div class="sticker">5</div>
             </div>
         </div>
-        <div class="chats-player">
+        <div class="chats-player chats-player--tomato">
             <div class="chats-player--face">
                 <img src="screenshots/clarkson-cutout.png" style="height:70px; width:70px;">
             </div>
@@ -58,11 +71,11 @@
                 <h6 class="chats-player--mention"></h6>
             </div>
             <div class="chats-player--times">
-                <h6 class="chats-player--time"></h6>
+                <h6 class="chats-player--time">09:56 PM</h6>
                 <div class="sticker">2</div>
             </div>
         </div>
-        <div class="chats-player">
+        <div class="chats-player chats-player--tomato">
             <div class="chats-player--face">
                 <img src="screenshots/sexton-cutout.png" style="height:70px; width:70px;">
             </div>
@@ -71,44 +84,50 @@
                 <h6 class="chats-player--mention"></h6>
             </div>
             <div class="chats-player--times">
-                <h6 class="chats-player--time"></h6>
+                <h6 class="chats-player--time">09:54 PM</h6>
                 <div class="sticker">1</div>
             </div>
         </div>
         <div class="chats-player">
             <div class="chats-player--face">
-                <img src="screenshots/conley-cutout.png" style="height:70px; width:70px;">
+                <img class="leave" src="screenshots/conley-cutout.png" style="height:70px; width:70px;">
             </div>
             <div class="chats-player--chat">
-                <h1 class="chats-player--name">MIKE CONLEY</h1>
-                <h6 class="chats-player--mention"></h6>
+                <h1 class="chats-player--name leave">MIKE CONLEY</h1>
+                <h6 class="chats-player--mention leave">Never easy saying goodbye to your guys. Even tougher leaving the 
+                    people in the...
+                </h6>
             </div>
             <div class="chats-player--times">
-                <h6 class="chats-player--time">Feb 8</h6>
+                <h6 class="chats-player--time leave">Feb 8</h6>
             </div>
         </div>
         <div class="chats-player">
             <div class="chats-player--face">
-                <img src="screenshots/mitchell-cutout.png" style="height:70px; width:70px;">
+                <img class="leave" src="screenshots/mitchell-cutout.png" style="height:70px; width:70px;">
             </div>
             <div class="chats-player--chat">
-                <h1 class="chats-player--name">Spida D Mitchell</h1>
-                <h6 class="chats-player--mention"></h6>
+                <h1 class="chats-player--name leave">Spida D Mitchell</h1>
+                <h6 class="chats-player--mention leave">Thank you for the memories and the incredible times... you 
+                    guys watched me...
+                </h6>
             </div>
             <div class="chats-player--times">
-                <h6 class="chats-player--time">2022/09/01</h6>
+                <h6 class="chats-player--time leave">2022/09/03</h6>
             </div>
         </div>
         <div class="chats-player">
             <div class="chats-player--face">
-                <img src="screenshots/gobert-cutout.png" style="height:70px; width:70px;">
+                <img class="leave" src="screenshots/gobert-cutout.png" style="height:70px; width:70px;">
             </div>
             <div class="chats-player--chat">
-                <h1 class="chats-player--name">Rudy D. Gobert</h1>
-                <h6 class="chats-player--mention"></h6>
+                <h1 class="chats-player--name leave">Rudy D. Gobert</h1>
+                <h6 class="chats-player--mention leave">Utah!!! I was just a kid from France when i got here 9 years ago
+                    i felt embraced...
+                </h6>
             </div>
             <div class="chats-player--times">
-                <h6 class="chats-player--time">2022/07/01</h6>
+                <h6 class="chats-player--time leave">2022/07/02</h6>
             </div>
         </div>
     </div>
