--- a/chats.html
+++ b/chats.html
@@ -42,7 +42,7 @@
             </div>
             <div class="chats-player--chat">
                 <h1 class="chats-player--name">Lauri Markkanen</h1>
-                <h6 class="chats-player--mention"></h6>
+                <h6 class="chats-player--mention">Bro call Keyonte</h6>
             </div>
             <div class="chats-player--times">
                 <h6 class="chats-player--time">10:04 PM</h6>
@@ -55,7 +55,7 @@
             </div>
             <div class="chats-player--chat">
                 <h1 class="chats-player--name">key</h1>
-                <h6 class="chats-player--mention"></h6>
+                <h6 class="chats-player--mention">OMG:(</h6>
             </div>
             <div class="chats-player--times">
                 <h6 class="chats-player--time">10:03 PM</h6>
@@ -68,7 +68,7 @@
             </div>
             <div class="chats-player--chat">
                 <h1 class="chats-player--name">Jordan Clarkson</h1>
-                <h6 class="chats-player--mention"></h6>
+                <h6 class="chats-player--mention">Gotcha, how long does it take?</h6>
             </div>
             <div class="chats-player--times">
                 <h6 class="chats-player--time">09:56 PM</h6>
@@ -81,7 +81,7 @@
             </div>
             <div class="chats-player--chat">
                 <h1 class="chats-player--name">Young Bull</h1>
-                <h6 class="chats-player--mention"></h6>
+                <h6 class="chats-player--mention">This is daily. I hope you understand✌️</h6>
             </div>
             <div class="chats-player--times">
                 <h6 class="chats-player--time">09:54 PM</h6>
@@ -134,7 +134,7 @@
     <nav class="menu">
         <ul>
             <li><a href="home.html"><i class="fa-solid fa-basketball fa-2xl"></i></a></li>
-            <li><a href="chats.html"><i class="fa-solid fa-comment fa-2xl select"></i></a></li>
+            <li><a href="chats.html"><i class="fa-solid fa-comment fa-2xl select"></i> <div class="sticker--notMove">11</div></a></li>
             <li><a href="#"><i class="fa-regular fa-calendar-days fa-2xl"></i></a></li>
             <li><a href="#"><i class="fa-solid fa-ellipsis fa-2xl"></i></a></li>
         </ul>
