Almost done with Lauri chat

--- a/chats.html
+++ b/chats.html
@@ -36,65 +36,73 @@
     </div>
 
     <div class="chats">
-        <div class="chats-player chats-player--tomato">
-            <div class="chats-player--face">
-                <img src="screenshots/markkanen-cutout.png" style="height:70px; width:70px;">
+        <a href="lauri-chat.html">
+            <div class="chats-player chats-player--tomato">
+                <div class="chats-player--face">
+                    <img src="screenshots/markkanen-cutout.png" style="height:70px; width:70px;">
+                </div>
+                <div class="chats-player--chat">
+                    <h1 class="chats-player--name">Lauri Markkanen</h1>
+                    <h6 class="chats-player--mention">Bro call Keyonte</h6>
+                </div>
+                <div class="chats-player--times">
+                    <h6 class="chats-player--time">10:04 PM</h6>
+                    <div class="sticker">3</div>
+                </div>
             </div>
-            <div class="chats-player--chat">
-                <h1 class="chats-player--name">Lauri Markkanen</h1>
-                <h6 class="chats-player--mention">Bro call Keyonte</h6>
+        </a>
+        <a href="key-chat.html">
+            <div class="chats-player chats-player--tomato">
+                <div class="chats-player--face">
+                    <img src="screenshots/george-cutout.png" style="height:70px; width:70px;">
+                </div>
+                <div class="chats-player--chat">
+                    <h1 class="chats-player--name">key</h1>
+                    <h6 class="chats-player--mention">OMG:(</h6>
+                </div>
+                <div class="chats-player--times">
+                    <h6 class="chats-player--time">10:03 PM</h6>
+                    <div class="sticker">5</div>
+                </div>
             </div>
-            <div class="chats-player--times">
-                <h6 class="chats-player--time">10:04 PM</h6>
-                <div class="sticker">3</div>
+        </a>
+        <a href="jordan-chat.html">
+            <div class="chats-player chats-player--tomato">
+                <div class="chats-player--face">
+                    <img src="screenshots/clarkson-cutout.png" style="height:70px; width:70px;">
+                </div>
+                <div class="chats-player--chat">
+                    <h1 class="chats-player--name">Jordan Clarkson</h1>
+                    <h6 class="chats-player--mention">Gotcha, how long does it take?</h6>
+                </div>
+                <div class="chats-player--times">
+                    <h6 class="chats-player--time">09:56 PM</h6>
+                    <div class="sticker">2</div>
+                </div>
             </div>
-        </div>
-        <div class="chats-player chats-player--tomato">
-            <div class="chats-player--face">
-                <img src="screenshots/george-cutout.png" style="height:70px; width:70px;">
+        </a>
+        <a href="sexton-chat.html">
+            <div class="chats-player chats-player--tomato">
+                <div class="chats-player--face">
+                    <img src="screenshots/sexton-cutout.png" style="height:70px; width:70px;">
+                </div>
+                <div class="chats-player--chat">
+                    <h1 class="chats-player--name">Young Bull</h1>
+                    <h6 class="chats-player--mention">This is daily. I hope you understand✌️</h6>
+                </div>
+                <div class="chats-player--times">
+                    <h6 class="chats-player--time">09:54 PM</h6>
+                    <div class="sticker">1</div>
+                </div>
             </div>
-            <div class="chats-player--chat">
-                <h1 class="chats-player--name">key</h1>
-                <h6 class="chats-player--mention">OMG:(</h6>
-            </div>
-            <div class="chats-player--times">
-                <h6 class="chats-player--time">10:03 PM</h6>
-                <div class="sticker">5</div>
-            </div>
-        </div>
-        <div class="chats-player chats-player--tomato">
-            <div class="chats-player--face">
-                <img src="screenshots/clarkson-cutout.png" style="height:70px; width:70px;">
-            </div>
-            <div class="chats-player--chat">
-                <h1 class="chats-player--name">Jordan Clarkson</h1>
-                <h6 class="chats-player--mention">Gotcha, how long does it take?</h6>
-            </div>
-            <div class="chats-player--times">
-                <h6 class="chats-player--time">09:56 PM</h6>
-                <div class="sticker">2</div>
-            </div>
-        </div>
-        <div class="chats-player chats-player--tomato">
-            <div class="chats-player--face">
-                <img src="screenshots/sexton-cutout.png" style="height:70px; width:70px;">
-            </div>
-            <div class="chats-player--chat">
-                <h1 class="chats-player--name">Young Bull</h1>
-                <h6 class="chats-player--mention">This is daily. I hope you understand✌️</h6>
-            </div>
-            <div class="chats-player--times">
-                <h6 class="chats-player--time">09:54 PM</h6>
-                <div class="sticker">1</div>
-            </div>
-        </div>
+        </a>
         <div class="chats-player">
             <div class="chats-player--face">
                 <img class="leave" src="screenshots/conley-cutout.png" style="height:70px; width:70px;">
             </div>
             <div class="chats-player--chat">
                 <h1 class="chats-player--name leave">MIKE CONLEY</h1>
-                <h6 class="chats-player--mention leave">Never easy saying goodbye to your guys. Even tougher leaving the 
+                <h6 class="chats-player--mention leave">Never easy saying goodbye to your guys. Even tougher leaving the
                     people in the...
                 </h6>
             </div>
@@ -108,7 +116,7 @@
             </div>
             <div class="chats-player--chat">
                 <h1 class="chats-player--name leave">Spida D Mitchell</h1>
-                <h6 class="chats-player--mention leave">Thank you for the memories and the incredible times... you 
+                <h6 class="chats-player--mention leave">Thank you for the memories and the incredible times... you
                     guys watched me...
                 </h6>
             </div>
@@ -134,7 +142,9 @@
     <nav class="menu">
         <ul>
             <li><a href="home.html"><i class="fa-solid fa-basketball fa-2xl"></i></a></li>
-            <li><a href="chats.html"><i class="fa-solid fa-comment fa-2xl select"></i> <div class="sticker--notMove">11</div></a></li>
+            <li><a href="chats.html"><i class="fa-solid fa-comment fa-2xl select"></i>
+                    <div class="sticker--notMove">11</div>
+                </a></li>
             <li><a href="#"><i class="fa-regular fa-calendar-days fa-2xl"></i></a></li>
             <li><a href="#"><i class="fa-solid fa-ellipsis fa-2xl"></i></a></li>
         </ul>
