key chat is completed

--- a/chats.html
+++ b/chats.html
@@ -81,7 +81,7 @@
                 </div>
             </div>
         </a>
-        <a href="sexton-chat.html">
+        <a href="young-chat.html">
             <div class="chats-player chats-player--tomato">
                 <div class="chats-player--face">
                     <img src="screenshots/sexton-cutout.png" style="height:70px; width:70px;">
