--- a/key-chat.html
+++ b/key-chat.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link sizes="16x16" href="screenshots/logo.png" />
-    <title>Lauri Markkanen</title>
+    <title>key</title>
     <link href="css/styles.css" rel="stylesheet" />
 </head>
 
@@ -30,7 +30,7 @@
         <div class="chat-title--exit"><a href="chats.html"> <i
                     class="fa-solid fa-chevron-left fa-xl"></i></a><span>8</span></div>
         <div class="chat-title--name">
-            <h1>Lauri Markkanen</h1>
+            <h1>key</h1>
         </div>
         <div class="chat-title--options">
             <i class="fa-solid fa-magnifying-glass fa-xl"></i>
@@ -41,58 +41,56 @@
         <div class="chat-text--date">
             <div class="chat-text--date--calender">
                 <i class="fa-regular fa-calendar"></i>
-                <span>Saturday, November 25, 2023</span>
-            </div>
-        </div>
-        <div class="chat-text__div">
-            <div class="chat-text__div--text">
-                <div class="chat-text__div--text--content">
-                    <span>Dude, your hamstring is okay?</span>
-                </div>
-            </div>
-            <span class="chat-text__div--time">09:12 PM</span>
-        </div>
-        <div class="chat-text__div">
-            <div class="chat-text__div--face">
-                <img src="screenshots/markkanen-cutout.png" style="height:35px; width:35px;">
-            </div>
-            <div class="chat-text__div--text">
-                <h6>Lauri Markkanen</h6>
-                <div class="chat-text__div--text--content">
-                    <span>Nah, I think I have to take a rest at least 3weeks</span>
-                </div>
-            </div>
-            <span class="chat-text__div--time">10:20 PM</span>
-        </div>
-        <div class="chat-text__div">
-            <div class="chat-text__div--face">
-                <img src="screenshots/markkanen-cutout.png" style="height:35px; width:35px;">
-            </div>
-            <div class="chat-text__div--text">
-                <h6>Lauri Markkanen</h6>
-                <div class="chat-text__div--text--content">
-                    <span>Kelly gonna play large role</span>
-                </div>
-            </div>
-            <span class="chat-text__div--time">10:21 PM</span>
-        </div>
-        <div class="chat-text--date">
-            <div class="chat-text--date--calender">
-                <i class="fa-regular fa-calendar"></i>
                 <span>Saturday, December 2, 2023</span>
             </div>
         </div>
-        <div class="chat-text__div">
+        <div class="chat-text__div--key">
             <div class="chat-text__div--face">
-                <img src="screenshots/markkanen-cutout.png" style="height:35px; width:35px;">
+                <img src="screenshots/george-cutout.png" style="height:35px; width:35px;">
             </div>
             <div class="chat-text__div--text">
-                <h6>Lauri Markkanen</h6>
+                <h6>key</h6>
                 <div class="chat-text__div--text--content">
-                    <span>Bro call Keyonte</span>
+                    <span>21 points 👌👌👌</span>
                 </div>
             </div>
-            <span class="chat-text__div--time">10:04 PM</span>
+            <span class="chat-text__div--time">09:04 PM</span>
+        </div>
+        <div class="chat-text__div--key">
+            <div class="chat-text__div--face">
+                <img src="screenshots/george-cutout.png" style="height:35px; width:35px;">
+            </div>
+            <div class="chat-text__div--text ">
+                <h6>key</h6>
+                <div class="chat-text__div--text--content">
+                    <span>NICKKKKK</span>
+                </div>
+            </div>
+        </div>
+        
+        <div class="chat-text__div--key--stack">
+                <div class="chat-text__div--text--content">
+                    <span>are you alive???</span>
+                </div>
+            
+        </div>
+        <div class="chat-text__div--key--stack">
+                <div class="chat-text__div--text--content">
+                    <span>We're here</span>
+                </div>
+            <span class="chat-text__div--time">09:56 PM</span>
+        </div>
+        <div class="chat-text__div--key">
+            <div class="chat-text__div--face">
+                <img src="screenshots/george-cutout.png" style="height:35px; width:35px;">
+            </div>
+            <div class="chat-text__div--text ">
+                <h6>key</h6>
+                <div class="chat-text__div--text--content">
+                    <span>OMG</span>
+                </div>
+            </div>
+            <span class="chat-text__div--time">10:03 PM</span>
         </div>
     </main>
     <form class="reply">
