--- a/young-chat.html
+++ b/young-chat.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link sizes="16x16" href="screenshots/logo.png" />
-    <title>Lauri Markkanen</title>
+    <title>key</title>
     <link href="css/styles.css" rel="stylesheet" />
 </head>
 
@@ -30,7 +30,7 @@
         <div class="chat-title--exit"><a href="chats.html"> <i
                     class="fa-solid fa-chevron-left fa-xl"></i></a><span>8</span></div>
         <div class="chat-title--name">
-            <h1>Lauri Markkanen</h1>
+            <h1>key</h1>
         </div>
         <div class="chat-title--options">
             <i class="fa-solid fa-magnifying-glass fa-xl"></i>
