chats finished and calendar 15%

--- a/young-chat.html
+++ b/young-chat.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link sizes="16x16" href="screenshots/logo.png" />
-    <title>key</title>
+    <title>youngbull</title>
     <link href="css/styles.css" rel="stylesheet" />
 </head>
 
@@ -30,7 +31,7 @@
         <div class="chat-title--exit"><a href="chats.html"> <i
                     class="fa-solid fa-chevron-left fa-xl"></i></a><span>8</span></div>
         <div class="chat-title--name">
-            <h1>key</h1>
+            <h1>Young Bull</h1>
         </div>
         <div class="chat-title--options">
             <i class="fa-solid fa-magnifying-glass fa-xl"></i>
@@ -41,59 +42,31 @@
         <div class="chat-text--date">
             <div class="chat-text--date--calender">
                 <i class="fa-regular fa-calendar"></i>
-                <span>Saturday, November 25, 2023</span>
-            </div>
-        </div>
-        <div class="chat-text__div">
-            <div class="chat-text__div--text">
-                <div class="chat-text__div--text--content">
-                    <span>Dude, your hamstring is okay?</span>
-                </div>
-            </div>
-            <span class="chat-text__div--time">09:12 PM</span>
-        </div>
-        <div class="chat-text__div">
-            <div class="chat-text__div--face">
-                <img src="screenshots/markkanen-cutout.png" style="height:35px; width:35px;">
-            </div>
-            <div class="chat-text__div--text">
-                <h6>Lauri Markkanen</h6>
-                <div class="chat-text__div--text--content">
-                    <span>Nah, I think I have to take a rest at least 3weeks</span>
-                </div>
-            </div>
-            <span class="chat-text__div--time">10:20 PM</span>
-        </div>
-        <div class="chat-text__div">
-            <div class="chat-text__div--face">
-                <img src="screenshots/markkanen-cutout.png" style="height:35px; width:35px;">
-            </div>
-            <div class="chat-text__div--text">
-                <h6>Lauri Markkanen</h6>
-                <div class="chat-text__div--text--content">
-                    <span>Kelly gonna play large role</span>
-                </div>
-            </div>
-            <span class="chat-text__div--time">10:21 PM</span>
-        </div>
-        <div class="chat-text--date">
-            <div class="chat-text--date--calender">
-                <i class="fa-regular fa-calendar"></i>
                 <span>Saturday, December 2, 2023</span>
             </div>
         </div>
+
         <div class="chat-text__div">
-            <div class="chat-text__div--face">
-                <img src="screenshots/markkanen-cutout.png" style="height:35px; width:35px;">
-            </div>
             <div class="chat-text__div--text">
-                <h6>Lauri Markkanen</h6>
                 <div class="chat-text__div--text--content">
-                    <span>Bro call Keyonte</span>
+                    <span>LMAO🤣🤣🤣 you got MVP?</span>
                 </div>
             </div>
-            <span class="chat-text__div--time">10:04 PM</span>
+            <span class="chat-text__div--time">09:14 PM</span>
         </div>
+        <div class="chat-text__div">
+            <div class="chat-text__div--face">
+                <img src="screenshots/sexton-cutout.png" style="height:35px; width:35px;">
+            </div>
+            <div class="chat-text__div--text">
+                <h6>Young Bull</h6>
+                <div class="chat-text__div--text--content">
+                    <span>This is daily, i hope you understand ✌️✌️✌️</span>
+                </div>
+            </div>
+            <span class="chat-text__div--time">09:54 PM</span>
+        </div>
+      
     </main>
     <form class="reply">
         <div class="reply__div">
