--- a/chats.html
+++ b/chats.html
@@ -145,7 +145,7 @@
             <li><a href="chats.html"><i class="fa-solid fa-comment fa-2xl select"></i>
                     <div class="sticker--notMove">11</div>
                 </a></li>
-            <li><a href="#"><i class="fa-regular fa-calendar-days fa-2xl"></i></a></li>
+            <li><a href="schedule.html"><i class="fa-regular fa-calendar-days fa-2xl"></i></a></li>
             <li><a href="#"><i class="fa-solid fa-ellipsis fa-2xl"></i></a></li>
         </ul>
     </nav>
