--- a/home.html
+++ b/home.html
@@ -201,7 +201,7 @@
             <li><a href="home.html"><i class="fa-solid fa-basketball fa-2xl select"></i></a></li>
             <li><a href="chats.html"><i class="fa-solid fa-comment fa-2xl"></i></a> <div class="sticker--move">11</div></li>
             <li><a href="schedule.html"><i class="fa-regular fa-calendar-days fa-2xl"></i></a></li>
-            <li><a href="#"><i class="fa-solid fa-ellipsis fa-2xl"></i></a></li>
+            <li><a href="shop.html"><i class="fa-solid fa-cart-shopping fa-2xl"></i></a></li>
         </ul>
     </nav>
 
