--- a/schedule.html
+++ b/schedule.html
@@ -86,7 +86,7 @@
             </button>
         </div>
         <div class="game-2week">
-            <button class="game-week--sun">
+            <button class="game-week--sun game-week--black">
                 <h5 class="yellow">3</h5>
                 <div class="game--home">
                     <h6>HOME</h6>
@@ -118,7 +118,7 @@
             <button class="game-week--fri">
                 <h5>8</h5>
             </button>
-            <button class="game-week--sat">
+            <button class="game-week--sat game-week--black">
                 <h5 class="yellow">9</h5>
                 <div class="game--home">
                     <h6>HOME</h6>
@@ -149,7 +149,7 @@
             <button class="game-week--wed">
                 <h5>13</h5>
             </button>
-            <button class="game-week--thu">
+            <button class="game-week--thu game-week--black">
                 <h5 class="yellow">14</h5>
                 <div class="game--home">
                     <h6>HOME</h6>
@@ -187,7 +187,7 @@
             <button class="game-week--mon">
                 <h5>18</h5>
             </button>
-            <button class="game-week--tue">
+            <button class="game-week--tue game-week--black">
                 <h5 class="yellow">19</h5>
                 <div class="game--home">
                     <h6>HOME</h6>
@@ -269,7 +269,7 @@
             </button>
         </div>
         <div class="game-6week">
-            <button class="game-week--sun">
+            <button class="game-week--sun game-week--black">
                 <h5 class="yellow">31</h5>
                 <div class="game--home">
                     <h6>HOME </h6>
@@ -305,7 +305,7 @@
             <li><a href="home.html"><i class="fa-solid fa-basketball fa-2xl"></i></a></li>
             <li><a href="chats.html"><i class="fa-solid fa-comment fa-2xl"></i></a> <div class="sticker--move">11</div></li>
             <li><a href="schedule.html"><i class="fa-regular fa-calendar-days fa-2xl select"></i></a></li>
-            <li><a href="#"><i class="fa-solid fa-ellipsis fa-2xl"></i></a></li>
+            <li><a href="shop.html"><i class="fa-solid fa-cart-shopping fa-2xl"></i></a></li>
         </ul>
     </nav>
 
