--- a/chats.html
+++ b/chats.html
@@ -146,7 +146,7 @@
                     <div class="sticker--notMove">11</div>
                 </a></li>
             <li><a href="schedule.html"><i class="fa-regular fa-calendar-days fa-2xl"></i></a></li>
-            <li><a href="#"><i class="fa-solid fa-ellipsis fa-2xl"></i></a></li>
+            <li><a href="shop.html"><i class="fa-solid fa-cart-shopping fa-2xl"></i></a></li>
         </ul>
     </nav>
 
