shop page is finished
window size adjustment is required

--- a/shop.html
+++ b/shop.html
@@ -32,20 +32,47 @@
     <div class="category">
         <div class="category__name">
             <h1>Shop By Category</h1>
-            <h3>Shop All</h3>
+            <a href="https://jazzteamstore.com/"><button>Shop All</button></a>
         </div>
         <div class="category__box">
-            <div class="category__box--jerseys">
-                <h1>JERSEYS</h1>
-            </div>
-            <div class="category__box--tees">
-                <h1>TEES</h1>
-            </div>
-            <div class="category__box--outerwear">
-                <h1>OUTERWEAR</h1>
-            </div>
+            <a href="https://jazzteamstore.com/collections/mens-jerseys">
+                <button class="category__box--jerseys">
+                    <h1>JERSEYS</h1>
+                </button>
+            </a>
+            <a href="https://jazzteamstore.com/collections/tees">
+                <button class="category__box--tees">
+                    <h1>TEES</h1>
+                </button>
+            </a>
+            <a href="https://jazzteamstore.com/collections/outerwear">
+                <button class="category__box--outerwear">
+                    <h1>OUTERWEAR</h1>
+                </button>
+            </a>
         </div>
     </div>
+    <div class="feature">
+        <div class="category__name">
+            <h1>Featured Items</h1>
+        </div>
+        <div class="feature-box">
+            <a href="https://jazzteamstore.com/products/maui-show-love-crew-pink-counterpoint">
+                <img src="https://jazzteamstore.com/cdn/shop/files/1CopyofDSC00861-satadj.jpg?v=1696390961&width=350">
+                <h1>Maui Show Love CREW - Pink - CounterPoint</h1>
+            </a>
+            <a href="https://jazzteamstore.com/products/aloha-tee-black-counterpoint">
+                <img src="https://jazzteamstore.com/cdn/shop/files/1CopyofDSC00360-satadj.jpg?v=1696393158&width=350">
+                <h1>Aloha Tee - Black - CounterPoint</h1>
+            </a>
+            <a href="https://jazzteamstore.com/products/show-love-muscle-tee-white-counterpoint">
+                <img src="https://jazzteamstore.com/cdn/shop/files/1CopyofDSC01034-satadj_ebd35e98-86cc-4d4d-918d-d9e6f43d1c62.jpg?v=1696731615&width=350">
+                <h1>Show Love Muscle Tee - White - CounterPoint</h1>
+            </a>
+        </div>
+    </div>
+    
+   
     
     <nav class="menu">
         <ul>
