last check point

--- a/home.html
+++ b/home.html
@@ -204,7 +204,12 @@
             <li><a href="shop.html"><i class="fa-solid fa-cart-shopping fa-2xl"></i></a></li>
         </ul>
     </nav>
-
+    
+    <div class="small-screen">
+        <div class="small-screen-text">
+            screen is too big :(
+        </div>
+    </div>
 
     <script src="https://kit.fontawesome.com/a768803cee.js" crossorigin="anonymous"></script>
 </body>
