--- a/young-chat.html
+++ b/young-chat.html
@@ -81,6 +81,12 @@
             </div>
         </div>
     </form>
+    
+    <div class="small-screen">
+        <div class="small-screen-text">
+            screen is too big :(
+        </div>
+    </div>
     <script src="https://kit.fontawesome.com/a768803cee.js" crossorigin="anonymous"></script>
 </body>
 
