--- a/chats.html
+++ b/chats.html
@@ -139,6 +139,8 @@
             </div>
         </div>
     </div>
+    
+
     <nav class="menu">
         <ul>
             <li><a href="home.html"><i class="fa-solid fa-basketball fa-2xl"></i></a></li>
@@ -149,7 +151,12 @@
             <li><a href="shop.html"><i class="fa-solid fa-cart-shopping fa-2xl"></i></a></li>
         </ul>
     </nav>
-
+    
+    <div class="small-screen">
+        <div class="small-screen-text">
+            screen is too big :(
+        </div>
+    </div>
     <script src="https://kit.fontawesome.com/a768803cee.js" crossorigin="anonymous"></script>
 </body>
 
