--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
 
     </div>
     
+    
+    <div class="small-screen">
+        <div class="small-screen-text">
+            screen is too big :(
+        </div>
+    </div>
     <script src="https://kit.fontawesome.com/a768803cee.js" crossorigin="anonymous"></script>
 </body>
 </html>
