--- a/schedule.html
+++ b/schedule.html
@@ -300,6 +300,12 @@
         </div>
     </main>
     
+    <div class="small-screen">
+        <div class="small-screen-text">
+            screen is too big :(
+        </div>
+    </div>
+    
     <nav class="menu">
         <ul>
             <li><a href="home.html"><i class="fa-solid fa-basketball fa-2xl"></i></a></li>
