--- a/chats.html
+++ b/chats.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link  sizes="16x16" href="screenshots/logo.png"/>
     <title>Chats</title>
     <link href="css/styles.css" rel="stylesheet" />
 </head>
