--- a/shop.html
+++ b/shop.html
@@ -4,7 +4,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Chats</title>
+        <link  sizes="16x16" href="screenshots/logo.png"/>
+        <title>Shop</title>
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     
